--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 <h2>Use</h2>
 <p>More <code>text</code>.</p>
 <h2>License</h2>
-<p><iframe width="560" height="315" src="https://www.youtube.com/embed/c5V-qL1HRho" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>embed</iframe></p>
-<p><a href="https://www.youtube.com/watch?v=SzmUde_EK5Y">A link without</a></p>
+<p>
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/c5V-qL1HRho"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen
+    >embed</iframe
+  >
+</p>
+<p><a href="https://www.youtube.com/watch?v=SzmUde_EK5Y">A regular link</a></p>
 <p>MIT</p>
