added codepen extension

--- a/example.html
+++ b/example.html
@@ -1,21 +1,10 @@
 <h1>Hello World</h1>
-<h2>Table of Content</h2>
-<h2>Install</h2>
-<p>A <strong>example</strong>.</p>
+<p>An <strong>example</strong>.</p>
 <h2>Use</h2>
 <p>More <code>text</code>.</p>
-<h2>License</h2>
-<p>
-  <iframe
-    width="560"
-    height="315"
-    src="https://www.youtube.com/embed/c5V-qL1HRho"
-    title="YouTube video player"
-    frameborder="0"
-    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen
-    >embed</iframe
-  >
-</p>
+<h2>Links</h2>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/c5V-qL1HRho" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>embed</iframe></p>
+<p><iframe src="https://codepen.io/possiblyBen/embed/PoQYYZQ?editable=true" style="width: 100%" height="300" scrolling="no" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen editable>embed</iframe></p>
 <p><a href="https://www.youtube.com/watch?v=SzmUde_EK5Y">A regular link</a></p>
+<h2>License</h2>
 <p>MIT</p>
